OpenStack provider is fixed after node filter properties type was changed

--- a/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
+++ b/toscatranslator/providers/openstack/TOSCA_openstack_definition_1_0.yaml
@@ -576,7 +576,7 @@ node_types:
         type: string
         required: true
       metadata:
-        type: string
+        type: list
         required: false
       scheduler_hints:
         type: string
