Provider Configuration now stored in configuration files

--- a/toscatranslator/providers/openstack/provider.cfg
+++ b/toscatranslator/providers/openstack/provider.cfg
@@ -1,3 +1,7 @@
+[main]
+tosca_elements_map_file = tosca_elements_map_to_openstack.yaml
+tosca_elements_definition_file = TOSCA_openstack_definition_1_0.yaml
+
 [ansible]
 module_prefix = os_
 module_description = Create OpenStack component
