Contains condition was checked with OS capabilities. Errors were fixed

--- a/toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
+++ b/toscatranslator/providers/common/TOSCA_provider_definition_1_0.yaml
@@ -21,7 +21,7 @@ node_types:
         occurrences: [ 1, 1 ]
     artifacts:
       contains:
-        implementation: contain.yaml
+        implementation: contains.yaml
         description: Contain function
       equals:
         implementation: equals.yaml
