--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -19,7 +19,33 @@ tosca.nodes.Compute:
                   - id
                   - value: network_id
                     condition: ip_contains
-                    facts: os_subnets_facts.ansible_facts.openstack_subnets
+                    facts:
+                      - source: os_subnets_facts
+                        executor: ansible
+                        value: target_objects
+                        parameters: {}
+                      - source: set_fact
+                        executor: ansible
+                        parameters:
+                          target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
+                        value: temp_value
+                      - source: set_fact
+                        executor: ansible
+                        parameters:
+                          new_target_objects: "{{{{ [] }}}}"
+                        value: tmp_value
+                      - source: set_fact
+                        parameters:
+                          new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
+                        extra:
+                          with_items: "{{{{ target_objects }}}}"
+                        value: temp_value
+                        executor: ansible
+                      - source: set_fact
+                        parameters:
+                          target_objects: "{{{{ new_target_objects }}}}"
+                        value: temp_value
+                        executor: ansible
                     executor: ansible
                     arguments:
                       - allocation_pool_start
