--- a/toscatranslator/providers/openstack/provider.cfg
+++ b/toscatranslator/providers/openstack/provider.cfg
@@ -5,3 +5,12 @@ tosca_elements_definition_file = TOSCA_openstack_definition_1_0.yaml
 [ansible]
 module_prefix = os_
 module_description = Create OpenStack component
+
+[ansible.node_filter]
+node_filter_source_prefix = os_
+node_filter_source_postfix = _facts
+node_filter_exceptions =
+    subnet = os_subnets_facts
+node_filter_inner_variable =
+    image = ansible_facts,openstack_image
+    flavor = ansible_facts,openstack_flavors
