--- a/toscatranslator/providers/amazon/provider.cfg
+++ b/toscatranslator/providers/amazon/provider.cfg
@@ -5,3 +5,7 @@ tosca_elements_definition_file = TOSCA_amazon_definition_1_0.yaml
 [ansible]
 module_prefix = ec2_
 module_description = Create element
+
+[ansible.node_filter]
+node_filter_source_prefix = ec2_
+node_filter_source_postfix = _facts
