--- a/toscatranslator/common/TOSCA_definition_1_0.yaml
+++ b/toscatranslator/common/TOSCA_definition_1_0.yaml
@@ -156,7 +156,7 @@ node_types:
     derived_from: tosca.nodes.Root
     attributes:
       meta:
-        type: map
+        type: string
         required: false
       private_address:
         type: string
