--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -3,85 +3,83 @@ tosca.nodes.Compute:
   - parameter: openstack.nodes.Server.properties.name
     value: "{self[name]}"
   - attributes:
-      meta:
-        parameter: openstack.nodes.Server.properties.meta
-        value:
-          - "{self[value]}"
+      meta: openstack.nodes.Server.properties.meta
       private_address:
         - parameter: openstack.nodes.Port.properties.fixed_ips
           value:
-            - parameter:
-                value: name
-                condition: equals
-                facts: os_networks_facts.ansible_facts.openstack_networks
+            - ip_address: "{self[value]}"
+        - parameter: openstack.nodes.Port.requirements.network.node_filter.properties
+          value:
+            - parameter: id
+              value:
+                value: network_id
+                condition: ip_contains
+                facts:
+                  - source: os_subnets_facts
+                    executor: ansible
+                    value: target_objects
+                    parameters: {}
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
+                    value: temp_value
+                  - source: set_fact
+                    executor: ansible
+                    parameters:
+                      new_target_objects: "{{{{ [] }}}}"
+                    value: tmp_value
+                  - source: set_fact
+                    parameters:
+                      new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
+                    extra:
+                      with_items: "{{{{ target_objects }}}}"
+                    value: temp_value
+                    executor: ansible
+                  - source: set_fact
+                    parameters:
+                      target_objects: "{{{{ new_target_objects }}}}"
+                    value: temp_value
+                    executor: ansible
                 executor: ansible
                 arguments:
-                  - id
-                  - value: network_id
-                    condition: ip_contains
-                    facts:
-                      - source: os_subnets_facts
-                        executor: ansible
-                        value: target_objects
-                        parameters: {}
-                      - source: set_fact
-                        executor: ansible
-                        parameters:
-                          target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
-                        value: temp_value
-                      - source: set_fact
-                        executor: ansible
-                        parameters:
-                          new_target_objects: "{{{{ [] }}}}"
-                        value: tmp_value
-                      - source: set_fact
-                        parameters:
-                          new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
-                        extra:
-                          with_items: "{{{{ target_objects }}}}"
-                        value: temp_value
-                        executor: ansible
-                      - source: set_fact
-                        parameters:
-                          target_objects: "{{{{ new_target_objects }}}}"
-                        value: temp_value
-                        executor: ansible
-                    executor: ansible
-                    arguments:
-                      - allocation_pool_start
-                      - allocation_pool_end
-                      - "{self[value]}"
-              value: "{self[value]}"
+                  - allocation_pool_start
+                  - allocation_pool_end
+                  - "{self[value]}"
         - parameter: openstack.nodes.Port.properties.name
           value: "{self[name]}_port_0"
-        - parameter: openstack.nodes.Server.requirements.nics
-          value: "{self[name]}_port"
+        - parameter: openstack.nodes.Server.properties.nics
+#        - parameter: openstack.nodes.Server.requirements.network
+          value:
+          - port-name: "{self[name]}_port_0"
       public_address:
-        parameter: openstack.nodes.FloatingIp
-        value:
-          - attributes.floating_ip_address
-          - parameter: requirements
-            value:
-              - parameter: network.node_filter.properties
-                value:
-                  - parameter: name
-                    value:
-                      value: name
-                      facts: os_networks_facts.ansible_facts.openstack_networks
-                      condition: equals
-                      executor: ansible
-                      arguments:
-                        - id
-                        - value: network_id
-                          condition: ip_contains
-                          facts: os_subnets_facts.ansible_facts.openstack_subnets
-                          executor: ansible
-                          arguments:
-                            - allocation_pool_start
-                            - allocation_pool_end
-                            - "{self[value]}"
-              - parameter: server
-                value: "{self[name]}_server"
+        - parameter: openstack.nodes.Server.attributes.auto_ip
+          value: false
+        - parameter: openstack.nodes.FloatingIp
+          value:
+            - attributes.floating_ip_address
+            - parameter: requirements
+              value:
+                - parameter: network.node_filter.properties
+                  value:
+                    - parameter: name
+                      value:
+                        value: name
+                        facts: os_networks_facts.ansible_facts.openstack_networks
+                        condition: equals
+                        executor: ansible
+                        arguments:
+                          - id
+                          - value: network_id
+                            condition: ip_contains
+                            facts: os_subnets_facts.ansible_facts.openstack_subnets
+                            executor: ansible
+                            arguments:
+                              - allocation_pool_start
+                              - allocation_pool_end
+                              - "{self[value]}"
+                - parameter: server
+                  value: "{self[name]}_server"
       networks.*.network_name:
         parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
         value:
