--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -72,7 +72,33 @@ tosca.nodes.Compute:
                           - id
                           - value: network_id
                             condition: ip_contains
-                            facts: os_subnets_facts.ansible_facts.openstack_subnets
+                            facts:
+                              - source: os_subnets_facts
+                                executor: ansible
+                                value: target_objects
+                                parameters: {}
+                              - source: set_fact
+                                executor: ansible
+                                parameters:
+                                  target_objects: "{{{{ target_objects['ansible_facts']['openstack_subnets'] }}}}"
+                                value: temp_value
+                              - source: set_fact
+                                executor: ansible
+                                parameters:
+                                  new_target_objects: "{{{{ [] }}}}"
+                                value: tmp_value
+                              - source: set_fact
+                                parameters:
+                                  new_target_objects: "{{{{ new_target_objects + [item | combine({{ 'allocation_pool_start': item['allocation_pools'][0]['start'] | default([]), 'allocation_pool_end': item['allocation_pools'][0]['end'] | default([]) }})] }}}}"
+                                extra:
+                                  with_items: "{{{{ target_objects }}}}"
+                                value: temp_value
+                                executor: ansible
+                              - source: set_fact
+                                parameters:
+                                  target_objects: "{{{{ new_target_objects }}}}"
+                                value: temp_value
+                                executor: ansible
                             executor: ansible
                             arguments:
                               - allocation_pool_start
@@ -81,10 +107,9 @@ tosca.nodes.Compute:
                 - parameter: server
                   value: "{self[name]}_server"
       networks.*.network_name:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        parameter: openstack.nodes.Server.properties.nics
         value:
-          - parameter: name
-            value: "{self[value]}"
+          - net-name: "{self[value]}"
       networks.*.network_id:
         parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
         value:
