Ansible playbook successfully run, but vm is assigned with two ports except 1, fip is still not working

--- a/toscatranslator/providers/openstack/provider.cfg
+++ b/toscatranslator/providers/openstack/provider.cfg
@@ -5,6 +5,9 @@ tosca_elements_definition_file = TOSCA_openstack_definition_1_0.yaml
 [ansible]
 module_prefix = os_
 module_description = Create OpenStack component
+async_default_time = 60
+async_default_retries = 60
+async_default_delay = 5
 
 [ansible.node_filter]
 node_filter_source_prefix = os_
